Added docs and filters
