# src/main/java/org/example/bank_rest/persistence/model/filter/TransactionFilter.java
@@ -2,6 +2,7 @@ package org.example.bank_rest.persistence.model.filter;
 
 import lombok.*;
 
+import java.math.BigDecimal;
 import java.util.UUID;
 
 @Builder
@@ -14,4 +15,6 @@ public class TransactionFilter {
     private Long toCardId;
     private UUID senderUuid;
     private UUID receiverUuid;
+    private BigDecimal amountMin;
+    private BigDecimal amountMax;
 }
